--- a/_posts/2025-06-18-L3akCTF-2025.md
+++ b/_posts/2025-06-18-L3akCTF-2025.md
@@ -6,13 +6,13 @@ categories: [Forensics]
 tags: [disk,network,memory,reverse]
 img_path: /images/L3akCTF2025
 image:
-  path: icon.png
+  path: /images/L3akCTF2025/icon.png
 ---
  I had the pleasure of contributing to L3akCTF 2025 as one of the admins and the author of a Forensics challenge. In this writeup, I’ll walk through the design, logic, and intended solution behind the challenge I created.
 
 
 # Breadcrumbs
-![breadcrumbs](breadcrumbs.png)
+![breadcrumbs](/images/L3akCTF2025/breadcrumbs.png)
 
 
 When accessing the challenge files, participants are presented with three key forensic artifacts:
@@ -156,7 +156,7 @@ This helps validate whether `7za.exe` is a clean compression tool or a **trojani
 
 🔗 **Check the file on VirusTotal:**  
 [result](https://www.virustotal.com/gui/file/4b2b76f03d586d216ebe019ca118dc082b7fe6cce0af676d297281f557edd00e)
-![virusTotal](VirusTotal.png)
+![virusTotal](/images/L3akCTF2025/VirusTotal.png)
 
 ✅ **Result:**  
 According to VirusTotal, the hash corresponds to a **legitimate and clean version** of `7za.exe` with **no detections** by antivirus engines.  
@@ -366,7 +366,7 @@ From the disassembly, we identified a hardcoded XOR key used to decrypt the shel
 
 🧲 Step 1: Extract the Resource
 We used [Resource Hacker](https://www.angusj.com/resourcehacker/) to extract the SHELL resource from the dumped cryptbase.dll.
-![ResourceHacker](ResourceHacker.png)
+![ResourceHacker](/images/L3akCTF2025/ResourceHacker.png)
 
 🔓 Step 2: Decrypt the Payload
 
@@ -395,7 +395,7 @@ After decrypting the `SHELL` resource, we opened `decrypted_shellcode.bin` in a 
 
 The first few bytes looked like this:
 **E8 00 00 00 00 59 49 89 C8**
-![HxD](HxD.png)
+![HxD](/images/L3akCTF2025/HxD.png)
 
 🧠 These bytes are a strong indicator of **Shellcode Reflective DLL Injection (SRDI)**. Specifically:
 
@@ -410,7 +410,7 @@ These are **signatures of shellcode generated using the [ShellcodeRDI](https://g
 
 
 
-![SRDI](SRDI.png)
+![SRDI](/images/L3akCTF2025/SRDI.png)
 we see from screenshot above the values we found at our file `E8 00 00 00 00`
 
 
@@ -640,7 +640,7 @@ To investigate the network communication with this server, we opened the `traffi
 ```wireshark
 ip.addr == 10.10.70.114
 ```
-![general_traffic](general_traffic.png)
+![general_traffic](/images/L3akCTF2025/general_traffic.png)
 
 🔐 **Encrypted Channel Observed**
 
@@ -655,7 +655,7 @@ While TLS 1.2 is still widely used and generally secure, it lacks some of the mo
 ### 🔍 Inspecting the TLS Handshake
 
 To better understand the encryption parameters, we examined **packet #10** in Wireshark, which contains the **Server Hello**, **Certificate**, and **Server Hello Done** messages.
-![server_hello](server_hello.png)
+![server_hello](/images/L3akCTF2025/server_hello.png)
 These fields provide insight into the **TLS configuration** used by the attacker-controlled server (`10.10.70.114`):
 
 - **TLS Version:** TLS 1.2
@@ -669,7 +669,7 @@ These fields provide insight into the **TLS configuration** used by the attacker
 ### 🔐 Extracting and Analyzing the TLS Certificate
 
 Now that we’ve identified the TLS handshake, we can **extract the server certificate** from the `Server Hello` message (packet #10) for further analysis.
-![certificate](certificate.png)
+![certificate](/images/L3akCTF2025/certificate.png)
 after you copy value and save it at my_certificate.txt 
 ```bash
 xxd -r -p my_certificate.txt > certificate.crt
@@ -774,7 +774,7 @@ decimal value:
 ---
 
 > 🎯 Once you have the decimal, paste it into [FactorDB](https://factordb.com/) to check if it can be factored.
-![factorize](factorize.png)
+![factorize](/images/L3akCTF2025/factorize.png)
 ### 🔓 RSA Modulus Factored
 
 The RSA modulus extracted from the TLS certificate was successfully factored using [FactorDB](https://factordb.com/), yielding the two prime numbers:
@@ -822,13 +822,13 @@ Now that we have successfully reconstructed the **RSA private key**, we can use 
      - **Protocol**: Leave empty
      - **Key File**: Path to `private.key`
      - **Password**: Leave empty 
-![tls_decrypt](tls_decrypt.png)
+![tls_decrypt](/images/L3akCTF2025/tls_decrypt.png)
 3. **Apply and restart Wireshark** (or reload the capture).
 
 ---
 
 ✅ **Result:** TLS packets between the attacker and victim are now decrypted, revealing the full plaintext content of the communication.
-![data_decrypted](data_decrypted.png)
+![data_decrypted](/images/L3akCTF2025/data_decrypted.png)
 ---
 
 ### 📦 Transferred Files Identified
@@ -842,7 +842,7 @@ As seen earlier during reverse engineering of the malicious `cryptbase.dll`, the
 - `sctasks.exe`
 
 These files are now clearly visible in the decrypted traffic:
-![http_object](http_object.png)
+![http_object](/images/L3akCTF2025/http_object.png)
 
 ---
 
@@ -1141,7 +1141,7 @@ This password authenticates the decryption process.
 Mount or explore the AD1 disk image using a forensics tool. You can use:
 
 - [FTK Imager](https://www.exterro.com/ftk-product-downloads/ftk-imager-4-7-3-81) – recommended for .ad1 images
-![ftk](ftk.png)
+![ftk](/images/L3akCTF2025/ftk.png)
 now after we extracted the directory
 
 ```bash
@@ -1218,7 +1218,7 @@ python3 volatility3-develop/vol.py -f memdump.mem windows.hashdump
 ### 🔓 Cracking NTLM Password Hashes
 
 To crack abdelrhman322 hash i will use [crackstation](https://crackstation.net/)
-![crackstation](crackstation.png)
+![crackstation](/images/L3akCTF2025/crackstation.png)
 now we got the password : `5563756`
 
 ### 🔑 Extracting the DPAPI Master Key with Mimikatz
